--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>OMHOS</title>
+<title>Vantage Code</title>
 <link href="styles.css" type="text/css" rel='stylesheet'>
 <link href="scrips.js"	type="text/javascript" >
 </head>
