--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href='#' class="b" >Contact</a></li>
              </ul>
 		</div>
+	<img src="../Logo/Finished Company Logo.jpg" alt="logo" id="log">
 	</div>
 </body>
 </html>
