Everything is gone

--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
 </head>
 
 <body>
-	<div class='header'>
-		<div class='group'>
-        	<ul class='nav'>
-            	<li><a href='#' class="b" >Works</a></li>
-                <li><a href='#' class="b" >About</a></li>
-                <li><a href='#' class="b" >Blog</a></li>
-                <li><a href='#' class="b" >Contact</a></li>
-             </ul>
-		</div>
-	<img src="../Logo/Finished Company Logo.jpg" alt="logo" id="log">
+	<div class='wrapper'>
 	</div>
 </body>
 </html>
