--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
 <meta charset="utf-8">
 <title>Vantage Code</title>
+<link type="image/png" href="../Logo/Finished Company Logo.jpg">
 <link href="styles.css" type="text/css" rel='stylesheet'>
 <link href="scrips.js"	type="text/javascript" >
 </head>
 
 <body>
 	<div class='wrapper'>
+
 	</div>
 </body>
 </html>
