--- a/index.html
+++ b/index.html
@@ -2,15 +2,28 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Vantage Code</title>
-<link type="image/png" href="../Logo/Finished Company Logo.jpg">
-<link href="styles.css" type="text/css" rel='stylesheet'>
-<link href="scrips.js"	type="text/javascript" >
+<title>Untitled Document</title>
 </head>
 
 <body>
-	<div class='wrapper'>
-
+	<div class='header'>
+    	<img class='logo' src="#">
+        <ol class='nav'>
+        	<li>Home</li>
+            <li>Studio</li>
+            <li>Services</li>
+            <li>Work</li>
+            <li>Contact</li>
+		</ol>
 	</div>
+    <div class='wrap1'>
+    	<h1>We believe that true perfection comes from truly great design</h1>
+    </div>
+        
+
+
+
+
+
 </body>
 </html>
