added list classes and buttons

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<div class='header'>
     	<img class='logo' src="#">
         <ol class='nav'>
-        	<li>Home</li>
-            <li>Studio</li>
-            <li>Services</li>
-            <li>Work</li>
-            <li>Contact</li>
+        	<li class='navbut'><a href='#'  >Home		</a></li>
+            <li class='navbut'><a href='#'  >Studio		</a></li>
+            <li class='navbut'><a href='#'  >Services	</a></li>
+            <li class='navbut'><a href='#'	>Work		</a></li>
+            <li class='navbut'><a href='#'	>Contact	</a></li>
 		</ol>
 	</div>
     <div class='wrap1'>
