--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Vantage Code</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <script type="text/javascript" src="app.js"></script>
+<link rel="icon" href="red-v.png" type="image/x-icon"/>
 
 
 </head>
