added favicon, logo, header, main page divs, footer

--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 
 <body>
 	<div class='header'>
-    	<img class='logo' src="#">
-        <ol class='nav'>
+    	<img class='logo' src='logo.png'>
+        <ul class='nav'>
         	<li class='navbut'><a href='#'  >Home		</a></li>
             <li class='navbut'><a href='#'  >Studio		</a></li>
             <li class='navbut'><a href='#'  >Services	</a></li>
             <li class='navbut'><a href='#'	>Work		</a></li>
             <li class='navbut'><a href='#'	>Contact	</a></li>
-		</ol>
+		</ul>
 	</div>
     <div class='wrap1'>
-    	<h1>We believe that true perfection comes from truly great design</h1>
+    	<h1 class='s'>We craft amazing digital experiences.</h1>
     </div>
     <div class='wrap2'>
-    	<h1>Hi, there !</h1>
-        <p1>We’re an unprecedented, innovative and lean web development studio. We create amazing web and mobile solutions that help our clients, whether big or small, succeed. 
-       		We love design. We use the most advanced state of the art technology to create the best deign possible. We believe in ourselves.
-         	We believe in what we do, and we’re the best at it. 
+    	<h1 class='s2'>Hi, there !</h1>
+        <p class='s3'>We’re an unprecedented, innovative and lean web development studio. We create amazing web and mobile solutions that help our clients, whether big or small, succeed. 
+       		We love design. We use the most advanced state of the art technology to create the best design possible. We believe in ourselves.
+         	We believe in what we do, and we’re the best at it. </br>
          	We are Vantage Code.
-        </p1>
+        </p>
     </div>
     <div class='footer'>
-    	<p2>Like what you've seen so far ? Why not follow us...</p2>
+    	<p class='s4'>Like what you've seen so far ? Why not follow us...</p>
     </div>
         
 
