fixed white div issue space

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<div class='wrapper'>
 	<div class='header'>
     	<img class='logo' src='logo.png'>
         <ul class='nav'>
@@ -20,9 +21,9 @@
             <li class='navbut'><a href='#'	>Work		</a></li>
             <li class='navbut'><a href='#'	>Contact	</a></li>
 		</ul>
-	</div>
+	</div> 
     <div class='wrap1'>
-    	<h1 class='s'>We craft amazing digital experiences.</h1>
+    	<h1 class='s'>We craft amazing digital experiences that help expand your business.</h1>
     </div>
     <div class='wrap2'>
     	<h1 class='s2'>Hi, there !</h1>
@@ -31,15 +32,15 @@
          	We believe in what we do, and we’re the best at it. </br>
          	We are Vantage Code.
         </p>
-    </div>
+    </div> 
     <div class='footer'>
     	<p class='s4'>Like what you've seen so far ? Why not follow us...</p>
     </div>
-        
+      
 
 
 
 
-
+</div>
 </body>
 </html>
