added meta(s) to html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <meta charset="utf-8">
 <title>Vantage Code</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
-<script type="text/javascript" src="app.js"></script>
 <link rel="icon" href="fav.png" type="image/x-icon"/>
-
-
+<link href='http://fonts.googleapis.com/css?family=Advent+Pro' rel='stylesheet' type='text/css'>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="Description" content="Vantage Code company Portfolio">
+<meta name="keywords" content="webdesign, design, brand, logo, code, vantage, code, egypt, website, vantage code, omar sherif, hossam khalifa">
+<meta name="author" content="Omar Sherif">
+<script type="text/javascript" src="app.js"></script>
 </head>
 
 <body>
