wrap1 fixes and color changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class='header'>
     	<img class='logo' src='logo.png'>
         <ul class='nav'>
-        	<li class='navbut'><a href='#'>Home</a></li>
+        	<li class='navbut' id='hs1'><a  href='#'>Home</a></li>
             <li class='navbut'><a href='#'>Studio</a></li>
             <li class='navbut'><a href='#'>Services</a></li>
             <li class='navbut'><a href='#'>Work</a></li>
@@ -26,7 +26,7 @@
 		</ul>
 	</div> 
     <div class='wrap1'>
-    	<h1 class='s'>We craft amazing digital experiences that help expand your business.</h1>
+    	<h1 class='s'><span style="color:red;">We</span> craft amazing digital experiences</br>that help expand your business.</h1>
     </div>
     <div class='wrap2'>
     	<h1 class='s2'>Hi, there !</h1>
