minor logo change and bug fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class='wrapper'>
 	<div class='header'>
-    	<img class='logo' src='logo.png'>
+    	<img class='logo' src='logowhite.png'>
         <ul class='nav'>
         	<li class='navbut' id='hs1'><a  href='#'>Home</a></li>
             <li class='navbut'><a href='#'>Studio</a></li>
