--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="Description" content="Vantage Code company Portfolio">
 <meta name="keywords" content="webdesign, design, brand, logo, code, vantage, code, egypt, website, vantage code, omar sherif, hossam khalifa">
-<meta name="author" content="Omar Sherif">
+<meta name="author" content="Omar Sherif & Hossam Khalifa">
 <script type="text/javascript" src="app.js"></script>
 </head>
 
@@ -28,7 +28,7 @@
 		</ul>
 	</div>
     <div class='wrap1'>
-    	<h1 class='s'><span style="color:red;">We</span> craft amazing digital experiences</br>that help expand your business.</h1>
+    	<h1 class='s'>ASPIRING INNOVATION</h1>
     </div>
     <div class='wrap2'>
     	<h1 class='s2'>Hi, there !</h1>
